@@ -15,6 +15,8 @@ examples/check_number_fail.pl
 examples/check_number_of_items_fail.pl
 examples/check_number_of_items_ok.pl
 examples/check_number_ok.pl
+examples/check_regexp_fail.pl
+examples/check_regexp_ok.pl
 examples/check_required_fail.pl
 examples/check_required_ok.pl
 examples/check_string_begin_fail.pl
@@ -48,9 +50,10 @@ t/Mo-utils/07-check_isa.t
 t/Mo-utils/08-check_length.t
 t/Mo-utils/09-check_number.t
 t/Mo-utils/10-check_number_of_items.t
-t/Mo-utils/11-check_required.t
-t/Mo-utils/12-check_string_begin.t
-t/Mo-utils/13-check_strings.t
+t/Mo-utils/11-check_regexp.t
+t/Mo-utils/12-check_required.t
+t/Mo-utils/13-check_string_begin.t
+t/Mo-utils/14-check_strings.t
 utils.pm
 xt/Mo-utils/01-pod_coverage.t
 xt/Mo-utils/02-pod.t
