@@ -4,7 +4,6 @@ TODO
 Same with error message of this subroutine.
 4. Add tests for error parameters (e.g. in check_isa()).
 5. Add some integration tests (with Mo). How?
-6. Add check_regexp()
 7.
 
 Applied
@@ -14,3 +13,6 @@ OK [20211019] skim
 
 3. Add examples for check_bool() to doc.
 OK [20220728] skim
+
+6. Add check_regexp()
+OK [20230709] skim
