@@ -1,4 +1,5 @@
 0.17
+ - Add check_regexp() function.
 
 0.16 2023-07-05T13:56:20+02:00
  - Add check_string_begin() function.
